--- a/css/mineSweeper.css
+++ b/css/mineSweeper.css
@@ -1,24 +1,38 @@
 body {
     background-color: black;
+    background-image: inherit;
+    background-image: url("bomb.jpg")
 }
+
 
 .cell {
     /* height: 4px;
     width: 4px; */
+    border: black solid 3px;
+    padding: 0px;
     text-align: center;
     font-size: 10x;
-    padding-inline: 15px;
-    padding-block: 5px;
-
+    width: 20px;
+    height: 15px;
+    padding-inline: 20px;
+    padding-block: 10px;
     max-inline-size: 7px;
     max-block-size: 7px;
     min-block-size: 7px;
     max-block-size: 7px;
     overflow: hidden;
-    text-overflow: ellipsis;
-    background-color: gray;
-    color: rgb(27, 20, 20);
+    background-color: rgb(65, 61, 61);
+    color: rgb(65, 61, 61);
+    cursor: pointer;
+
 }
+
+.cell:hover {
+    background-color: rgb(74, 65, 65);
+
+}
+
+
 
 .board {
     table-layout: fixed;
@@ -27,13 +41,14 @@ body {
     text-align: center;
     height: 223px;
     width: 223px;
+    background-color: rgb(12, 62, 105);
 }
 
 .modify {
     table-layout: fixed;
     text-align: center;
-    border: black solid 1px;
-    background-color: rgb(112, 80, 80);
+    /* border: black solid 1px; */
+    /* background-color: rgb(112, 80, 80); */
     margin-inline: 113px;
 
 }
@@ -48,8 +63,12 @@ body {
 
 .timer {
     /* border: black solid 1px; */
+    /* border: black solid 2px; */
+    margin-inline: 460px;
     padding: 5px;
     font-size: 40px;
+    color: rgb(210, 16, 16);
+    /* background-color: rgb(29, 24, 24); */
 
 }
 
@@ -58,7 +77,7 @@ button {
     height: 30px;
     background-color: rgb(171, 102, 12);
     margin-top: 1px;
-    cursor: grab;
+    cursor: pointer;
 }
 
 button:hover {
@@ -74,8 +93,8 @@ button:hover {
 
 
 .hint {
-    margin-inline-end: 350px;
-    background-color: rgb(112, 80, 80);
+    /* margin-inline-end: 350px; */
+    background-color: rgb(21, 92, 124);
     font-size: 15px;
 }
 
@@ -88,7 +107,40 @@ button:hover {
     background-color: antiquewhite;
 }
 
+.negshint:hover {
+    background-color: antiquewhite;
+}
+
 
 .shown {
-    background-color: rgb(241, 234, 234);
+    background-color: antiquewhite;
+    cursor: default;
+
+}
+
+.shown:hover {
+    background-color: antiquewhite;
+
+}
+
+
+
+.safe {
+    background-color: rgb(21, 92, 124);
+    font-size: 12px;
+
+    /* margin-inline-start: 100px; */
+}
+
+.quickshown {
+    border: rgb(16, 56, 177) solid 2px;
+}
+
+.minepos {
+    background-color: rgb(21, 92, 124);
+
+}
+
+.manuallymines {
+    border: red solid 2px;
 }
